--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 server.port=8081
 logging.level.org.springframework=info
 management.endpoints.web.exposure.include=*
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.defer-datasource-initialization=true
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
-#spring.datasource.url=jdbc:mysql://localhost:3306/db
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#Spring security
+spring.security.user.name=username
+spring.security.user.password=password
